# Alexandria

./: LICENSE  README.md  USAGE_EXAMPLES.md  install.sh  pyproject.toml  run-gui.sh
desktop/: org.alexandria.recall.desktop
man/: alexandria.1
src/alexandria/: __init__.py  cli.py
src/alexandria/config/: __init__.py  config.py  xdg.py
src/alexandria/core/: __init__.py  models.py  ocr.py  screenshot.py  text_processor.py  wayland_info.py
src/alexandria/gui/: __init__.py  about.py  main_window.py  preferences.py  theme.py
src/alexandria/manager/: password.py
src/alexandria/service/: __init__.py  daemon.py
systemd/: alexandria.service
